WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139149
http/tests/appcache/main-resource-fallback-for-network-error-crash.html can break subsequent tests
https://bugs.webkit.org/show_bug.cgi?id=139149
Summary
http/tests/appcache/main-resource-fallback-for-network-error-crash.html can b...
Alexey Proskuryakov
Reported
2014-12-01 13:57:23 PST
http/tests/appcache/main-resource-fallback-for-network-error-crash.html adds a fallback cache entry for <
http://127.0.0.1:8000/
>, so any tests that simulate a failure and run after it get the fallback content instead. E.g. run-webkit-tests --no-retry --child-processes=1 http/tests/appcache/main-resource-fallback-for-network-error-crash.html http/tests/misc/error404.pl
Attachments
proposed fix
(12.29 KB, patch)
2014-12-02 13:22 PST
,
Alexey Proskuryakov
andersca
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-12-02 13:22:30 PST
Created
attachment 242443
[details]
proposed fix
WebKit Commit Bot
Comment 2
2014-12-02 16:05:13 PST
Comment on
attachment 242443
[details]
proposed fix Rejecting
attachment 242443
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 242443, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebKit/mac/ChangeLog contains OOPS!. Full output:
http://webkit-queues.appspot.com/results/4658292093616128
Alexey Proskuryakov
Comment 3
2014-12-02 16:33:21 PST
Committed <
http://trac.webkit.org/r176698
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug